# wilma-dumper

./: Cargo.toml  PCAPdroid_07_Oct_12_13_32.pcap  README.md  sslkeylogfile.txt
old/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
old/src/: dumper.ts  index.ts  types.d.ts
src/: ipc.rs  main.rs  reg.rs  structs.rs
src/dump/: courses.rs  mod.rs
src/interfaces/: cli.rs  gui.rs  mod.rs
src/wilma/: auth.rs  mod.rs
src/wilma/api/: courses.rs  mod.rs  models.rs
