[package]
name = "wilma-dumper"
version = "0.1.0"
edition = "2021"
authors = ["Mixu_78"]
description = "balls"

[dependencies]
winreg = "0.10.1"
windows = { version = "0.42.0", features = ["Win32_System_Console"]}

reqwest = { version = "0.11.12", features = ["blocking"] }

webbrowser = "0.8.0"

rand = "0.8.5"
sha2 = "0.10.6"
base64-url = "1.4.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

clap = { version = "4.0.13", features = ["derive"] }
eframe = "0.19.0"

dialoguer = { version = "0.10.2", default-features = false, features = ["fuzzy-select"]}

tokio = { version = "1.21.2", default-features = false, features = ["rt-multi-thread", "net", "macros"] }

log = "0.4.17"
simple_logger = "2.3.0"
anyhow = "1.0.65"