[package]
name = "wilma-dumper"
version = "0.1.0"
edition = "2021"
authors = ["Mixu_78"]
description = "balls"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
winreg = "0.10.1"
windows = { version = "0.42.0", features = ["Win32_System_Console"]}

async-trait = "0.1.57"
lazy_static = "1.4.0"
regex = "1.6.0"
anyhow = { version = "1.0.65", features = ["backtrace"] }
tokio = { version = "1.21.2", default-features = false, features = ["rt-multi-thread", "net", "macros"] }

reqwest = "0.11.12"
scraper = "0.13.0"
webbrowser = "0.8.0"

rand = "0.8.5"
sha2 = "0.10.6"
base64-url = "1.4.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.6"

clap = { version = "4.0.13", features = ["derive"] }
dialoguer = { version = "0.10.2", default-features = false, features = ["fuzzy-select"]}
eframe = "0.19.0"

log = "0.4.17"
flexi_logger = "0.24.0"